--- a/templates/inquiry.html
+++ b/templates/inquiry.html
@@ -12,9 +12,9 @@
       <!-- <iframe width="100%" src="https://www.youtube.com/embed/qXWWgZ-nnEs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
       {{i['link']|safe}}
       <p class="card-text">
-        What is the LHC? What questions arose from this experiment?
+        {{i['question']}}
       </p>
-      <a href="#" class="btn btn-primary">See answers here</a>
+      <a href="#" class="btn btn-primary btn-block">See answers here</a>
     </div>
   </div>
   {% endfor %}
