--- a/templates/A09.html
+++ b/templates/A09.html
@@ -8,19 +8,20 @@
 
 
 <h1 class="text-center">CHEM-500.A09:</h1>
-<div class="row">
+<div class="row justify-content-center">
 
 
   {% for i in range(1, 11) %}
-  <div class="card" style="width: 18rem;">
+  <div class='col-md-7'>
     <!-- <img class="card-img-top" src="https://gph.is/2pkUxcJ" alt="Card image cap"> -->
-    <div class="card-body">
-      <h5 class="card-title">CHE-500.A09</h5>
-      <!-- <iframe width="100%" src="https://www.youtube.com/embed/qXWWgZ-nnEs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-      <p class="card-text">
-
+    <div>
+      <p>
+        <h5>general concept:</h5>
+        {{test_info[1]['A11 concepts'][i-1]}}
+      </p>
+      <p>
         <h5>POL:</h5>
-        Lorem ipsum dolor sit amet.
+        {{test_info[1]['POL'][i-1]}}
       </p>
       <a href="/chem/CHE-500.A09/ question {{i}}" class="btn btn-primary btn-block">See question {{i}}</a>
     </div>
@@ -32,16 +33,17 @@
 
 
 
-  {% for i in range(10, 26) %}
-  <div class="card" style="width: 18rem;">
+  {% for i in range(11, 26) %}
+  <div class='col-md-7'>
     <!-- <img class="card-img-top" src="https://gph.is/2pkUxcJ" alt="Card image cap"> -->
-    <div class="card-body">
-      <h5 class="card-title">CHE-500.A09</h5>
-      <!-- <iframe width="100%" src="https://www.youtube.com/embed/qXWWgZ-nnEs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-      <p class="card-text">
-
+    <div>
+      <p>
+        <h5>general concept:</h5>
+        {{test_info[1]['A11 concepts'][i-1]}}
+      </p>
+      <p>
         <h5>POL:</h5>
-        Lorem ipsum dolor sit amet.
+        {{test_info[1]['POL'][i-1]}}
       </p>
       <a href="/chem/CHE-500.A09/ long question {{i}}" class="btn btn-primary btn-block">See question {{i}}</a>
     </div>
