--- a/templates/A05.html
+++ b/templates/A05.html
@@ -8,17 +8,20 @@
 
 
 <h1 class="text-center">CHEM-500.A05:</h1>
-<div class="row">
+<div class="row justify-content-center">
 
 
   {% for i in range(1, 26) %}
-  <div class="card" style="width: 18rem;">
+  <div class="col-7">
     <!-- <img class="card-img-top" src="https://gph.is/2pkUxcJ" alt="Card image cap"> -->
-    <div class="card-body">
-      <h5 class="card-title">CHE-500.A05</h5>
-      <!-- <iframe width="100%" src="https://www.youtube.com/embed/qXWWgZ-nnEs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+    <div>
+      <p>
+        <h5>general concept:</h5>
+        {{test_info[2]['concepts'][i-1]}}
+      </p>
+      <p>
         <h5>POL:</h5>
-        Lorem ipsum dolor sit amet.
+        {{test_info[2]['POL'][i-1]}}
       </p>
       <a href="/chem/CHE-500.A05/ question {{i}}" class="btn btn-primary btn-block">See question {{i}}</a>
     </div>
