--- a/templates/A09.html
+++ b/templates/A09.html
@@ -11,13 +11,13 @@
 <div class="row justify-content-center">
 
 
-  {% for i in range(1, 11) %}
+  {% for i in range(1, 26) %}
   <div class='col-md-7'>
     <!-- <img class="card-img-top" src="https://gph.is/2pkUxcJ" alt="Card image cap"> -->
     <div>
       <p>
         <h5>general concept:</h5>
-        {{test_info[1]['A11 concepts'][i-1]}}
+        {{test_info[1]['concepts'][i-1]}}
       </p>
       <p>
         <h5>POL:</h5>
@@ -30,30 +30,6 @@
     <!-- <li><a href="chem/question {{i}}">Question {{i}}</a></li> -->
 
   {% endfor %}
-
-
-
-  {% for i in range(11, 26) %}
-  <div class='col-md-7'>
-    <!-- <img class="card-img-top" src="https://gph.is/2pkUxcJ" alt="Card image cap"> -->
-    <div>
-      <p>
-        <h5>general concept:</h5>
-        {{test_info[1]['A11 concepts'][i-1]}}
-      </p>
-      <p>
-        <h5>POL:</h5>
-        {{test_info[1]['POL'][i-1]}}
-      </p>
-      <a href="/chem/CHE-500.A09/ long question {{i}}" class="btn btn-primary btn-block">See question {{i}}</a>
-    </div>
-  </div>
-
-    <!-- <li><a href="chem/long question {{i}}">Question {{i}}</a></li> -->
-
-  {% endfor %}
-
-
 
 
 </div>
